Introduced bean mapper